вынес весь маппинг в DTO в сервисы; чтоб контроллер занимался только маршрутизацией запросов и возвратом ответов